# mug-lang

./: .gitignore  Cargo.toml  LICENSE
src/: clif.rs  errors.rs  lexer.rs  linker.rs  main.rs  mir.rs  mirbuild.rs  mirprint.rs
src/backends/: clif.rs  mod.rs
src/errors/: e001_io.rs  e002_parse.rs  e003_unknown_var.rs  e004_type_mismatch.rs  e005_binop_type_mismatch.rs  e006_if_cond_type.rs  mod.rs
src/lowering/: mod.rs  variables.rs
src/mir/: build.rs  mod.rs  print.rs
src/parsing/: ast.rs  lexer.rs  mod.rs  parser.rs
