[package]
name = "my-lang"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
ariadne = "0.6.0"
chumsky = "0.11.2"
cranelift = { version = "0.125.3", features = ["module"] }
cranelift-codegen = { version = "0.125.3", features = ["all-arch"] }
cranelift-module = "0.125.3"
cranelift-object = "0.125.3"
pest_derive = "2.8.3"
target-lexicon = "0.13.3"
tempfile = "3.23.0"
